# WebMapping

./: .env.example  .gitignore  Dockerfile  LICENSE  Main.py  Makefile  Map.py  Node.py  README.md  Scrapper.py  Url_Handling.py  compose.yaml  main.py  pyproject.toml  requirements.txt  scrapper.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: lint.yml  python-app.yml  test.yml
containers/crawler/: Dockerfile  Makefile  requirements.txt
containers/crawler/src/webmap/: __init__.py  crawler.py  database.py
containers/crawler/test/: test_scraper.py
containers/dashboard/: Dockerfile
docs/: pull_request_template.md  testing_strategy.md
src/dashboard/: api.py
src/dashboard/screenshot/: web.py
src/webmap/: Crawler.py  Node.py  Scrapper.py  __init__.py  api.py  crawler.py  database.py  main.py  map.py  node.py  scraper.py  url_handling.py
src/webmap/boundingbox/: __init__.py  bbox.py  capture.py  database.py  web.py
src/webmap/database/: __init__.py  base.py  connection.py  constants.py  control.py  database.py  graph.py  stack.py  status.py
src/webmap/screenshot/: __init__.py  capture.py  database.py  web.py
test/: test_crawler.py  test_map.py  test_node.py  test_scraper.py  test_scrapper.py  test_url_handling.py
tests/: conftest.py  test_map.py  test_scraper.py  test_stitch.py  test_url_handling.py
tools/: boundingbox.py  clean_database.py  get_data_as_coco.py  save_screenshot.py  screenshot.py
