[project]
name = "WebMapping"
version = "1.1.2"
authors = [{name="Uplink036"}]
description = "A simple web mapping application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "html5lib", 
    "bs4",
    "plotly",
    "networkx",
    "numpy",
    "matplotlib",
    "neo4j",
    "dotenv"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = [
    "build",
    "coverage", 
    "hypothesis",
    "responses",
    "pytest",
    "pytest-cov"
]
lint = [
    "black",
    "isort",
    "mypy"
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webmap"]

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
strict_bytes = true
local_partial_types = true

[tool.black]
line-length = 88
