[project]
name = "webmapping"
version = "4.0.0"
authors = [{name="Uplink036"}]
description = "A simple web mapping application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "neo4j",
    "dotenv",
    "requests",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
crawler = [
    "html5lib", 
    "bs4",
    "selenium",
    "pillow",
]
dashboard = [
    "bs4",
    "selenium",
    "fastapi",
    "uvicorn",
]
dev = [
    "build",
    "coverage", 
    "hypothesis",
    "responses",
    "pytest",
    "pytest-cov",
]
lint = [
    "black",
    "isort",
    "mypy",
]
all = ["WebMapping[dev,lint,dashboard,crawler]"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard", "src/webmap"]


[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
strict_bytes = true
local_partial_types = true

[tool.black]
line-length = 88
